# AoC2022

./: .gitignore  Cargo.toml  README.md  pyproject.toml
.github/workflows/: python.yml  rust.yml
src/python/: aoc1.py  aoc2.py  aoc3.py  aoc4.py  aoc5.py  aoc6.py  aoc7.py  aoc8.py  aoc9.py
src/rust/: aoc1.rs  aoc2.rs  aoc3.rs  aoc4.rs  lib.rs  loaders.rs
