[tool.poetry]
name = "aoc2022"
version = "0.1.0"
description = "Solutions to Advent of Code 2022"
authors = ["Erik Silfverswärd  <21970817+skogsvik@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
autopep8 = "^2"
pylint = "^2.15.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pylint.main]
jobs = 0

[tool.pylint."messages control"]
disable = [
    "raw-checker-failed",
    "bad-inline-option",
    "locally-disabled",
    "file-ignored",
    "suppressed-message",
    "useless-suppression",
    "deprecated-pragma",
    "use-symbolic-message-instead",
    "missing-function-docstring",
    "missing-module-docstring",
    ]


[tool.pytest.ini_options]
python_files = "*.py" # All tests are defined in their respective days, so we check all the pytohn files
testpaths = ["src/python"]
addopts = ["-v"]
